syntax = "proto3";

option csharp_namespace = "GrpcServer";

package streamdemo;

service StreamDemo {
  rpc ServerStreamingDemo(Test) returns (stream Test);
  rpc ClientStreamingDemo(stream Test) returns (Test);
  rpc BidirectionalStreamingDemo(stream Test) returns (stream Test);
}

message Test{
	string TestMessage = 1;
}